Changes for 1.6.6

 - [ZBX-1014] fixed gaps on graph with fixed y axis (Artem)
 - [ZBX-1013] fixed evaluation of aggregate items for proxy hosts (Sasha)
 - [ZBX-1011] zabbix_sender will send data in blocks of 250 values per TCP connection (Sasha)
 - [DEV-417] added services[] metric for Windows agents (Sasha)
 - [ZBX-1005] fixed evaluations of functions diff, change and abschange for character items if received value more than 255 characters (Sasha)
 - [ZBX-1004] made snmp parameters editable in templated items (Artem)
 - [ZBX-1001] fixed possible server crash while processing macros {ITEM.LASTVALUE} (Sasha)
 - [ZBX-999] fixed query in availability reports (Artem)
 - [ZBX-996] fixed possible server crash with enabled StartDBSyncers option (Sasha)
 - [ZBX-993] fixed possible vulnerability of trapper (Sasha)
 - [ZBX-964] added check on item in trigger expression (Artem)
 - [ZBX-987] fixed shutting down server/proxy after connection lost to remote mysql server (Sasha)
 - [ZBX-809] fixed memory leak while processing perf_counter metric under Windows (Sasha)
 - [ZBX-959] fixed windows agent crash while processing performance counters under Windows 2000. Thanks to Takanori Suzuki (Sasha)
 - [ZBX-733] added checks on value map creation/update (Artem)
 - [ZBX-768] improved menu linebreaking (Artem)
 - [ZBX-853] fixed item massdelete if not zabbix item selected (Artem)
 - [ZBX-963] removed sid from users map element url (Artem)
 - [ZBX-980] removed sid from users trigger url (Artem)
 - [ZBX-981] fixed aggregate item helper text (Richlv)
 - [ZBX-213] added sql patches for graphs_items color field (Artem)
 - [ZBX-933] fixed user profile auto-logout behavior (Artem)
 - [ZBX-908] fixed item nextcheck recalculation on item update (Artem)
 - [ZBX-965] fixed color in graph legend (Artem)
 - [ZBX-966] added sorting in map creation form (Artem)
 - [ZBX-824] fixed net.tcp.service to work with host DNS name (Alexei)